--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,214 @@
-selenium~=4.11.2
-requests~=2.31.0
-bs4~=0.0.1
-beautifulsoup4~=4.12.2
-pandas~=2.0.3
-Scrapy~=2.9.0
-typer~=0.3.2
-html2text~=2020.1.16
-itemadapter~=0.8.0
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
+appdirs==1.4.4
+appnope==0.1.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.0
+async-lru==2.0.4
+attrs==23.1.0
+Automat==22.10.0
+Babel==2.13.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.1.0
+blessed==1.20.0
+boto3==1.28.63
+botocore==1.31.63
+bs4==0.0.1
+cached-property==1.5.2
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+chromedriver-autoinstaller==0.6.2
+click==7.1.2
 colorama==0.4.4
-shellingham==1.4.0
+comm==0.1.4
+constantly==15.1.0
+contourpy==1.2.0
+cryptography==41.0.2
+cssselect==1.2.0
+cycler==0.12.1
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+elastic-transport==8.4.0
+elasticsearch==8.9.0
+enlighten==1.11.2
+exceptiongroup==1.1.2
+executing==2.0.0
+explicit==0.1.3
+fake-useragent==1.2.1
+fastapi==0.104.0
+fastjsonschema==2.18.1
+filelock==3.12.2
+fonttools==4.44.0
+fqdn==1.5.1
+frozenlist==1.4.0
+grpcio==1.57.0
+h11==0.14.0
+html2text==2020.1.16
+httpcore==0.17.3
+httpx==0.24.1
+hyperlink==21.0.0
+idna==3.4
+importlib-metadata==6.8.0
+incremental==22.10.0
+iniconfig==2.0.0
+ipykernel==6.25.2
+ipython==8.16.1
+ipython-genutils==0.2.0
+ipywidgets==8.1.1
+isoduration==20.11.0
+itemadapter==0.8.0
+itemloaders==1.1.0
+jedi==0.19.1
+Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.3.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.8.0
+jupyter-lsp==2.2.0
+jupyter_client==8.4.0
+jupyter_core==5.4.0
+jupyter_server==2.8.0
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.7
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.9
+jupyterlab_server==2.25.0
+kiwisolver==1.4.5
+lxml==4.9.3
+MarkupSafe==2.1.3
+matplotlib==3.8.1
+matplotlib-inline==0.1.6
+meteo-downloader==1.0
+mistune==3.0.2
+msgpack==1.0.5
+nbclient==0.8.0
+nbconvert==7.9.2
+nbformat==5.9.2
+nest-asyncio==1.5.8
+nltk==3.8.1
+notebook==7.0.6
+notebook_shim==0.2.3
+numpy==1.25.1
+outcome==1.2.0
+overrides==7.4.0
+packages==0.1.1
+packaging==23.1
+pandas==2.0.3
+pandocfilters==1.5.0
+parse==1.19.1
+parsel==1.8.1
+parso==0.8.3
+pbr==5.11.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.1.0
+platformdirs==3.11.0
+pluggy==0.13.1
+prefixed==0.7.0
+prometheus-client==0.17.1
+prompt-toolkit==3.0.39
+Protego==0.2.1
+protobuf==4.24.0
+psutil==5.9.6
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.11.0
+pyarrow==13.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==2.4.2
+pydantic_core==2.10.1
+PyDispatcher==2.0.7
+pyee==8.2.2
+Pygments==2.16.1
+pymongo==3.13.0
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
+pyppeteer==1.0.2
+pyquery==2.0.0
+PySocks==1.7.1
 pytest==6.2.4
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-json-logger==2.0.7
+pytils==0.4.1
+pytz==2023.3
+PyYAML==6.0.1
+pyzmq==25.1.1
+qtconsole==5.4.4
+QtPy==2.4.1
+queuelib==1.6.2
+ray==2.6.2
+redis==3.5.3
+referencing==0.30.2
+regex==2023.10.3
+requests==2.31.0
+requests-cache==0.5.2
+requests-file==1.5.1
+requests-html==0.10.0
+resolver==0.2.1
+retry==0.9.2
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.9.2
+s3transfer==0.7.0
+scrapeops-scrapy-proxy-sdk==1.0
+Scrapy==2.9.0
+scrapy-scrapingbee==0.0.5
+scrapy-selenium==0.0.7
+selector==0.10.1
+selenium==4.11.2
+Send2Trash==1.8.2
+service-identity==23.1.0
+shellingham==1.4.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+SQLAlchemy==2.0.22
+stack-data==0.6.3
+starlette==0.27.0
+terminado==0.17.1
+tinycss2==1.2.1
+tldextract==3.4.4
+toml==0.10.2
+tomli==2.0.1
+tools==0.1.9
+tornado==6.3.3
+tqdm==4.65.0
+traitlets==5.11.2
+trio==0.22.2
+trio-websocket==0.10.3
+Twisted==22.10.0
+typer==0.3.2
+types-python-dateutil==2.8.19.14
+typing_extensions==4.8.0
+tzdata==2023.3
+Unidecode==1.3.6
+uri-template==1.3.0
+urllib3==1.26.16
+uvicorn==0.23.2
+w3lib==2.1.1
+wcwidth==0.2.6
+webcolors==1.13
+webdriver-manager==3.9.1
+webencodings==0.5.1
+websocket-client==1.6.4
+websockets==10.4
+widgetsnbextension==4.0.9
+wsproto==1.2.0
+zipp==3.17.0
+zope.interface==6.0
